--- a/index.html
+++ b/index.html
@@ -1,77 +1,167 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Healthy Life</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <!-- Font Awesome Icons -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <!-- Custom CSS -->
     <style>
         body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
+            font-family: 'Poppins', sans-serif;
+            background-color: #f8f9fa;
             color: #333;
         }
         header {
-            background: #4CAF50;
+            background: linear-gradient(135deg, #4CAF50, #45a049);
             color: white;
-            padding: 1rem 0;
+            padding: 100px 0;
             text-align: center;
+        }
+        header h1 {
+            font-size: 3.5rem;
+            font-weight: 600;
+        }
+        header p {
+            font-size: 1.2rem;
         }
         nav {
             background: #333;
-            color: white;
-            padding: 0.5rem;
-            text-align: center;
+            padding: 1rem 0;
         }
         nav a {
             color: white;
-            margin: 0 10px;
+            margin: 0 15px;
             text-decoration: none;
+            font-weight: 400;
+            transition: color 0.3s;
+        }
+        nav a:hover {
+            color: #4CAF50;
         }
         .container {
-            width: 80%;
-            margin: auto;
-            overflow: hidden;
+            padding: 60px 20px;
+        }
+        section {
+            margin-bottom: 60px;
+        }
+        section h2 {
+            font-size: 2.5rem;
+            font-weight: 600;
+            margin-bottom: 20px;
+            color: #4CAF50;
+        }
+        section p {
+            font-size: 1.1rem;
+            line-height: 1.8;
+        }
+        .carousel-item img {
+            height: 500px;
+            object-fit: cover;
+        }
+        .carousel-caption {
+            background: rgba(0, 0, 0, 0.5);
             padding: 20px;
+            border-radius: 10px;
         }
         footer {
             background: #333;
             color: white;
+            padding: 20px 0;
             text-align: center;
-            padding: 1rem 0;
-            margin-top: 20px;
+        }
+        footer p {
+            margin: 0;
+        }
+        .icon {
+            font-size: 2rem;
+            color: #4CAF50;
+            margin-bottom: 10px;
+        }
+        .card {
+            transition: transform 0.3s;
+        }
+        .card:hover {
+            transform: translateY(-10px);
         }
     </style>
 </head>
 <body>
+    <!-- Header -->
     <header>
         <h1>Welcome to Healthy Life</h1>
         <p>Your guide to a healthier, happier you!</p>
     </header>
-    <nav>
-        <a href="#nutrition">Nutrition</a>
-        <a href="#exercise">Exercise</a>
-        <a href="#mental-health">Mental Health</a>
-        <a href="#resources">Resources</a>
+
+    <!-- Navigation -->
+    <nav class="text-center">
+        <a href="#nutrition"><i class="fas fa-utensils"></i> Nutrition</a>
+        <a href="#exercise"><i class="fas fa-running"></i> Exercise</a>
+        <a href="#mental-health"><i class="fas fa-brain"></i> Mental Health</a>
+        <a href="#resources"><i class="fas fa-book"></i> Resources</a>
     </nav>
+
+    <!-- Carousel -->
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="https://source.unsplash.com/1600x600/?healthy,food" class="d-block w-100" alt="Healthy Food">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Nutrition</h5>
+                    <p>Eat well, live well.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="https://source.unsplash.com/1600x600/?exercise,fitness" class="d-block w-100" alt="Exercise">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Exercise</h5>
+                    <p>Stay active, stay healthy.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="https://source.unsplash.com/1600x600/?mindfulness,meditation" class="d-block w-100" alt="Mental Health">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Mental Health</h5>
+                    <p>Take care of your mind.</p>
+                </div>
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+
+    <!-- Main Content -->
     <div class="container">
         <section id="nutrition">
-            <h2>Nutrition</h2>
-            <p>Eating a balanced diet is key to maintaining a healthy life. Focus on fruits, vegetables, lean proteins, and whole grains.</p>
+            <h2><i class="fas fa-utensils icon"></i> Nutrition</h2>
+            <p>Eating a balanced diet is key to maintaining a healthy life. Focus on fruits, vegetables, lean proteins, and whole grains. Avoid processed foods and sugary drinks.</p>
         </section>
         <section id="exercise">
-            <h2>Exercise</h2>
-            <p>Regular physical activity boosts your energy, improves mood, and reduces the risk of chronic diseases.</p>
+            <h2><i class="fas fa-running icon"></i> Exercise</h2>
+            <p>Regular physical activity boosts your energy, improves mood, and reduces the risk of chronic diseases. Aim for at least 30 minutes of exercise daily.</p>
         </section>
         <section id="mental-health">
-            <h2>Mental Health</h2>
-            <p>Take care of your mind by practicing mindfulness, getting enough sleep, and staying connected with loved ones.</p>
+            <h2><i class="fas fa-brain icon"></i> Mental Health</h2>
+            <p>Take care of your mind by practicing mindfulness, getting enough sleep, and staying connected with loved ones. Mental health is just as important as physical health.</p>
         </section>
         <section id="resources">
-            <h2>Resources</h2>
+            <h2><i class="fas fa-book icon"></i> Resources</h2>
             <p>Check out these helpful resources:</p>
             <ul>
                 <li><a href="https://www.who.int/health-topics/healthy-diet" target="_blank">WHO Healthy Diet</a></li>
@@ -80,8 +170,13 @@
             </ul>
         </section>
     </div>
+
+    <!-- Footer -->
     <footer>
         <p>&copy; 2023 Healthy Life. All rights reserved.</p>
     </footer>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
