--- a/index.html
+++ b/index.html
@@ -115,21 +115,21 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="https://source.unsplash.com/1600x600/?healthy,food" class="d-block w-100" alt="Healthy Food">
+                <img src="https://github.com/MindfulMusing/vigilant-umbrella/blob/main/nutrition.jpg?raw=true" class="d-block w-100" alt="Healthy Food">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Nutrition</h5>
                     <p>Eat well, live well.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="https://source.unsplash.com/1600x600/?exercise,fitness" class="d-block w-100" alt="Exercise">
+                <img src="https://github.com/MindfulMusing/vigilant-umbrella/blob/main/excercise.jpg?raw=true" class="d-block w-100" alt="Exercise">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Exercise</h5>
                     <p>Stay active, stay healthy.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="https://source.unsplash.com/1600x600/?mindfulness,meditation" class="d-block w-100" alt="Mental Health">
+                <img src="https://github.com/MindfulMusing/vigilant-umbrella/blob/main/mind.jpg?raw=true" class="d-block w-100" alt="Mental Health">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Mental Health</h5>
                     <p>Take care of your mind.</p>
