--- a/nutrition.html
+++ b/nutrition.html
@@ -128,7 +128,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card">
-                        <img src="https://source.unsplash.com/400x300/?vegetables" alt="Vegetables">
+                        <img src="https://github.com/MindfulMusing/vigilant-umbrella/blob/main/nutrition.jpg?raw=true" alt="Vegetables">
                         <div class="card-body">
                             <h3>Vegetables</h3>
                             <p>Packed with fiber and essential nutrients. Include a variety of colors in your diet.</p>
