--- a/nutrition.html
+++ b/nutrition.html
@@ -137,7 +137,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card">
-                        <img src="https://source.unsplash.com/400x300/?protein" alt="Protein">
+                        <img src="https://github.com/MindfulMusing/vigilant-umbrella/blob/main/proteins.jpg?raw=true" alt="Protein">
                         <div class="card-body">
                             <h3>Protein</h3>
                             <p>Essential for muscle repair and growth. Choose lean meats, beans, and nuts.</p>
