--- a/nutrition.html
+++ b/nutrition.html
@@ -109,7 +109,7 @@
         <section id="importance">
             <h2>Why Nutrition Matters</h2>
             <p>Nutrition is the foundation of a healthy life. A balanced diet provides the essential nutrients your body needs to function properly, maintain energy levels, and prevent chronic diseases. Good nutrition supports physical and mental well-being, helping you live a longer, healthier life.</p>
-            <img src="https://source.unsplash.com/800x400/?nutrition,healthy" alt="Importance of Nutrition">
+            <img src="https://github.com/MindfulMusing/vigilant-umbrella/blob/main/proteins.jpg?raw=true" alt="Importance of Nutrition">
         </section>
 
         <!-- Food Groups -->
@@ -119,7 +119,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="card">
-                        <img src="https://source.unsplash.com/400x300/?fruits" alt="Fruits">
+                        <img src="https://github.com/MindfulMusing/vigilant-umbrella/blob/main/fruits.jpg?raw=true" alt="Fruits">
                         <div class="card-body">
                             <h3>Fruits</h3>
                             <p>Rich in vitamins, minerals, and antioxidants. Aim for 2-3 servings daily.</p>
@@ -158,7 +158,7 @@
                 <li><strong>Control portion sizes:</strong> Avoid overeating by using smaller plates.</li>
                 <li><strong>Plan your meals:</strong> Prepare healthy meals in advance to avoid unhealthy choices.</li>
             </ul>
-            <img src="https://source.unsplash.com/800x400/?healthy,eating" alt="Healthy Eating Tips">
+            <img src="https://github.com/MindfulMusing/vigilant-umbrella/blob/main/nutrition1.jpg?raw=true" alt="Healthy Eating Tips">
         </section>
     </div>
 
