--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Healthy Life - Your guide to a healthier, happier you. Learn about nutrition, exercise, and mental health.">
+    <meta name="keywords" content="healthy life, nutrition, exercise, mental health, wellness">
+    <meta name="author" content="Healthy Life">
     <title>Healthy Life</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -16,6 +19,7 @@
             font-family: 'Poppins', sans-serif;
             background-color: #f8f9fa;
             color: #333;
+            line-height: 1.8;
         }
         header {
             background: linear-gradient(135deg, #4CAF50, #45a049);
@@ -47,27 +51,35 @@
         .container {
             padding: 60px 20px;
         }
-        section {
-            margin-bottom: 60px;
-        }
-        section h2 {
+        h2 {
             font-size: 2.5rem;
             font-weight: 600;
-            margin-bottom: 20px;
             color: #4CAF50;
+            margin-bottom: 20px;
         }
-        section p {
+        h3 {
+            font-size: 2rem;
+            font-weight: 600;
+            color: #333;
+            margin-top: 40px;
+            margin-bottom: 15px;
+        }
+        p {
             font-size: 1.1rem;
-            line-height: 1.8;
+            margin-bottom: 20px;
         }
-        .carousel-item img {
-            height: 500px;
-            object-fit: cover;
-        }
-        .carousel-caption {
-            background: rgba(0, 0, 0, 0.5);
-            padding: 20px;
+        img {
+            max-width: 100%;
+            height: auto;
             border-radius: 10px;
+            margin-bottom: 20px;
+        }
+        .card {
+            transition: transform 0.3s;
+            margin-bottom: 20px;
+        }
+        .card:hover {
+            transform: translateY(-10px);
         }
         footer {
             background: #333;
@@ -78,16 +90,15 @@
         footer p {
             margin: 0;
         }
-        .icon {
-            font-size: 2rem;
-            color: #4CAF50;
-            margin-bottom: 10px;
+        .btn-primary {
+            background: #4CAF50;
+            border: none;
+            padding: 10px 20px;
+            font-size: 1rem;
+            transition: background 0.3s;
         }
-        .card {
-            transition: transform 0.3s;
-        }
-        .card:hover {
-            transform: translateY(-10px);
+        .btn-primary:hover {
+            background: #45a049;
         }
     </style>
 </head>
@@ -100,80 +111,96 @@
 
     <!-- Navigation -->
     <nav class="text-center">
+        <a href="#home"><i class="fas fa-home"></i> Home</a>
         <a href="#nutrition"><i class="fas fa-utensils"></i> Nutrition</a>
         <a href="#exercise"><i class="fas fa-running"></i> Exercise</a>
         <a href="#mental-health"><i class="fas fa-brain"></i> Mental Health</a>
-        <a href="#resources"><i class="fas fa-book"></i> Resources</a>
+        <a href="#contact"><i class="fas fa-envelope"></i> Contact</a>
     </nav>
-
-    <!-- Carousel -->
-    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        </div>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="https://github.com/MindfulMusing/vigilant-umbrella/blob/main/nutrition.jpg?raw=true" class="d-block w-100" alt="Healthy Food">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>Nutrition</h5>
-                    <p>Eat well, live well.</p>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="https://github.com/MindfulMusing/vigilant-umbrella/blob/main/excercise.jpg?raw=true" class="d-block w-100" alt="Exercise">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>Exercise</h5>
-                    <p>Stay active, stay healthy.</p>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="https://github.com/MindfulMusing/vigilant-umbrella/blob/main/mind.jpg?raw=true" class="d-block w-100" alt="Mental Health">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>Mental Health</h5>
-                    <p>Take care of your mind.</p>
-                </div>
-            </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
-    </div>
 
     <!-- Main Content -->
     <div class="container">
+        <!-- Home Section -->
+        <section id="home">
+            <h2>About Healthy Life</h2>
+            <p>Healthy Life is your ultimate guide to achieving a balanced and fulfilling lifestyle. We provide tips and resources on nutrition, exercise, and mental health to help you live your best life.</p>
+            <img src="https://source.unsplash.com/800x400/?healthy,lifestyle" alt="Healthy Lifestyle">
+        </section>
+
+        <!-- Nutrition Section -->
         <section id="nutrition">
-            <h2><i class="fas fa-utensils icon"></i> Nutrition</h2>
+            <h2>Nutrition</h2>
             <p>Eating a balanced diet is key to maintaining a healthy life. Focus on fruits, vegetables, lean proteins, and whole grains. Avoid processed foods and sugary drinks.</p>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card">
+                        <img src="https://source.unsplash.com/400x300/?fruits" alt="Fruits">
+                        <div class="card-body">
+                            <h3>Fruits</h3>
+                            <p>Rich in vitamins, minerals, and antioxidants. Aim for 2-3 servings daily.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card">
+                        <img src="https://source.unsplash.com/400x300/?vegetables" alt="Vegetables">
+                        <div class="card-body">
+                            <h3>Vegetables</h3>
+                            <p>Packed with fiber and essential nutrients. Include a variety of colors in your diet.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card">
+                        <img src="https://source.unsplash.com/400x300/?protein" alt="Protein">
+                        <div class="card-body">
+                            <h3>Protein</h3>
+                            <p>Essential for muscle repair and growth. Choose lean meats, beans, and nuts.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
+
+        <!-- Exercise Section -->
         <section id="exercise">
-            <h2><i class="fas fa-running icon"></i> Exercise</h2>
+            <h2>Exercise</h2>
             <p>Regular physical activity boosts your energy, improves mood, and reduces the risk of chronic diseases. Aim for at least 30 minutes of exercise daily.</p>
+            <img src="https://source.unsplash.com/800x400/?exercise,fitness" alt="Exercise">
         </section>
+
+        <!-- Mental Health Section -->
         <section id="mental-health">
-            <h2><i class="fas fa-brain icon"></i> Mental Health</h2>
+            <h2>Mental Health</h2>
             <p>Take care of your mind by practicing mindfulness, getting enough sleep, and staying connected with loved ones. Mental health is just as important as physical health.</p>
+            <img src="https://source.unsplash.com/800x400/?mindfulness,meditation" alt="Mental Health">
         </section>
-        <section id="resources">
-            <h2><i class="fas fa-book icon"></i> Resources</h2>
-            <p>Check out these helpful resources:</p>
-            <ul>
-                <li><a href="https://www.who.int/health-topics/healthy-diet" target="_blank">WHO Healthy Diet</a></li>
-                <li><a href="https://www.cdc.gov/physicalactivity/basics/index.htm" target="_blank">CDC Physical Activity Basics</a></li>
-                <li><a href="https://www.mind.org.uk/information-support/tips-for-everyday-living/" target="_blank">Mental Health Tips</a></li>
-            </ul>
+
+        <!-- Contact Section -->
+        <section id="contact">
+            <h2>Contact Us</h2>
+            <p>Have questions or feedback? Reach out to us!</p>
+            <form>
+                <div class="mb-3">
+                    <label for="name" class="form-label">Name</label>
+                    <input type="text" class="form-control" id="name" required>
+                </div>
+                <div class="mb-3">
+                    <label for="email" class="form-label">Email</label>
+                    <input type="email" class="form-control" id="email" required>
+                </div>
+                <div class="mb-3">
+                    <label for="message" class="form-label">Message</label>
+                    <textarea class="form-control" id="message" rows="5" required></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
         </section>
     </div>
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2023 Healthy Life. All rights reserved.</p>
+        <p>&copy; 2023 Healthy Life. All rights reserved. | <a href="#privacy-policy" style="color: #4CAF50; text-decoration: none;">Privacy Policy</a></p>
     </footer>
 
     <!-- Bootstrap JS -->
